--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -19,4 +19,7 @@ plugins:
 rules:
   no-console: warn
   react/react-in-jsx-scope: off
+  react/function-component-definition: off
+  react/jsx-props-no-spreading: off
+  jsx-a11y/click-events-have-key-events: off
   '@typescript-eslint/no-unused-vars': warn
